vlib/v/checker/tests/array_map_anon_fn_err_a.vv
fn main() {
	a := [1,2,3,4].map(fn(a int, b int) int {return a + b})
	println(a)
}
